<resources>
    <string name="app_name">AlphaDecoder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="assistant">Assistant</string>
    <string name="apps">Apps</string>
    <string name="profile">Profile</string>
    <string name="rewards">Rewards</string>
    <string name="details">Details</string>
    <string name="redeem_reward">Redeem Reward</string>
    <string name="image_url">https://meichsteadt.github.io/corgiGame/img/birthday-corgi.jpg</string>
    <string name="family_security_and_accessibility">Family Security and Accessibility</string>
    <string name="preferences">Preferences</string>
    <string name="my_apps">My Apps</string>
    <string name="search_for_apps">Search for Apps</string>
    <string name="the_app_store_allows_you_to_control_the_apps_installed_in_your_family_s_device_to_get_a_better_control_and_remove_unwanted_apps_that_might_hamper_with_their_smartphone_experience">The app store allows you to control the apps installed in your family\'s device to get a better control and remove unwanted apps that might hamper with their smartphone experience</string>
    <string-array name="languages"  translatable="false">
        <item>hi | (Hindi) हिन्दी</item>
        <item>mr | (Marathi) मराठी</item>
        <item>bn | (Bangla) বাংলা</item>
        <item>gu | (Gujarati) ગુજરાતી</item>
        <item>pa | (Punjabi) ਪੰਜਾਬੀ</item>
        <item>ur | (Urdu) اردو </item>
        <item>as | (Assamese) অসাম্যেসে </item>
        <item>ml | (Malayalam) മലയാളം </item>
        <item>te | (Telegu) తెలుగు </item>
        <item>kn | (Kannada) ಕನ್ನಡ </item>
        <item>ta | (Tamil) தமிழ்</item>
        <item>or | (Odia) ଓଡ଼ିଆ</item>
    </string-array>
    <string name="save">Save</string>
    <string name="choose_mother_tongue">Choose Mother Tongue</string>

    <!--bot options-->
    <string name="app_search">App Search</string>
    <string name="category_search">Category Search</string>
    <string name="open_app">Open App</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="change_language">Change Language</string>
    <string name="hello_i_am_your_assistant">Hello! I am Jugnu</string>
    <string name="need_help">Your friend and Voice assistant</string>
    <string name="i_can_help">Things I can do for you :</string>
    <string name="racing_games">Racing Games</string>
    <string name="show_racing_games">Show me Racing Games</string>
    <string name="similar_apps">Similar Apps for you</string>
    <string name="rewards_query">What are my rewards ?</string>
    <string name="clean_space">Clean my unused apps</string>
    <string name="great_offers">Show me some great offers</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="hi_how_can_i_help">How can I help ?</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="clean_phone">Clean Phone</string>
    <string name="category_suggestion">Here are some suggestions for category</string>
    <string name="cat_finance">Finance</string>
    <string name="cat_games">Games</string>
    <string name="cat_music">Music</string>
    <string name="cat_shopping">Shopping</string>

</resources>