<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_assistant">

    <fragment
        android:id="@+id/navigation_assistant"
        android:name="com.example.alphadecoder.ui.assistant.AssistantFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_apps"
        android:name="com.example.alphadecoder.ui.apps.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_assistant" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.alphadecoder.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.example.alphadecoder.ui.rewards.RewardsFragment"
        android:label="@string/rewards"
        tools:layout="@layout/rewards_fragment" />

</navigation>