<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingHorizontal="18dp"
    android:paddingTop="28dp"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileIV"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="Alpha Boi"
        android:textColor="@color/text_color_1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/profileIV"
        app:layout_constraintStart_toEndOf="@id/profileIV"
        app:layout_constraintTop_toTopOf="@id/profileIV" />

    <TextView
        android:id="@+id/familySecurityTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_security"
        android:drawableEnd="@drawable/ic_right"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingVertical="8dp"
        android:text="@string/family_security_and_accessibility"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileIV" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familySecurityTV" />

    <TextView
        android:id="@+id/preferencesTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_settings"
        android:drawableEnd="@drawable/ic_right"
        android:drawablePadding="4dp"
        android:paddingVertical="8dp"
        android:text="@string/preferences"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preferencesTV" />

    <TextView
        android:id="@+id/myAppsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_list"
        android:drawableEnd="@drawable/ic_right"
        android:drawablePadding="4dp"
        android:paddingVertical="8dp"
        android:text="@string/my_apps"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myAppsTV" />

</androidx.constraintlayout.widget.ConstraintLayout>